5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1594_820.log
== TEST (2019-03-21 16:14:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:16:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R$50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    notas_R$50 = valor // 50
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:19:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
n50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
r50 = valor % 50

# Quantidade de notas de R$ 10
n10 = r50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
r10 = r50 % 10

# Quantidade de notas de R$ 2
n2 = r10 // 2

print(int(n50))
print(int(n10))
print(int(n2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n50 = valor // 50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:20:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
n50 = valor // 50

print(n50)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n50 = valor // 50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:21:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
r50 = valor % 50

# Quantidade de notas de R$ 10
n10 = r50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
r10 = r50 % 10

# Quantidade de notas de R$ 2
n2 = r10 // 2

print(int(n50))
print(int(n10))
print(int(n2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 20:21:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
r50 = valor % 50

# Quantidade de notas de R$ 10
n10 = r50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
r10 = r50 % 10

# Quantidade de notas de R$ 2
n2 = r10 // 2

print(int(n50))
print(int(n10))
print(int(n2))

-- EXECUTION TIME:
0.182107
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
